--- a/package.json
+++ b/package.json
@@ -17,17 +17,18 @@
         "@rushstack/eslint-patch": "^1.1.3",
         "@tailwindcss/aspect-ratio": "^0.4.0",
         "@tailwindcss/forms": "^0.5.2",
-        "@types/node": "^17.0.44",
-        "@vitejs/plugin-vue": "^2.3.3",
+        "@types/node": "^18.7.8",
+        "@vitejs/plugin-vue": "^3.0.3",
         "@vue/eslint-config-prettier": "^7.0.0",
         "@vue/eslint-config-typescript": "^11.0.0",
         "@vue/tsconfig": "^0.1.3",
         "eslint": "^8.17.0",
         "eslint-plugin-vue": "^9.1.1",
+        "laravel-vite-plugin": "^0.5.4",
         "postcss": "^8.4.14",
         "prettier": "^2.7.0",
         "prettier-plugin-tailwindcss": "^0.1.11",
         "typescript": "^4.7.3",
-        "vite": "^2.9.12"
+        "vite": "^3.0.9"
     }
 }
