--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
     "extends": "@vue/tsconfig/tsconfig.web.json",
     "include": ["env.d.ts", "resources/js/**/*", "resources/js/**/*.vue"],
     "compilerOptions": {
+        "jsx": "preserve",
         "baseUrl": ".",
         "paths": {
             "@/*": ["./resources/js/*"]
